
This file shows the changes in recent releases of MODX. The most current release is usually the
development release, and is only shown to give an idea of what's currently in the pipeline.

- [#5471] Add publishing options to Duplicate Resource window
- [#5879] Ensure html tags are stripped on titles in the Resource edit view
- [#5855] Ensure if no parents are specified, resourcelist input option works as expected
- [#5852] Fix issue where input options are wiped on quick update TV
- Add showNone option to source/getlist processor
- [#5619] Enable modElements to store content in external files
- [#5856] Implement ability for derivative Resource types to have their own translatable name
- [#4726] Implement server-side state provider for modExt to fix size problems with cookies
- [#5860] Fix FC SQL error when user is in no groups
- [#5843] Add required asterisk to required Element fields
- [#5723] Add Media Source tab to User Group Access screen
- Change "Cancel" references to "Close" for clarity
- [#4566] Fix online users manager dashboard widget grid
- [#5809] Change "Remove" to "Delete" where appropriate to clarify language
- Refactor processors to be class-based
- [#90] 301 Redirect id method requests when request_method_strict is not enabled
- [#90], [#5676] Improvements to strict routing with friendly_urls
- [#5323] Add system events for moving Resources in and out of Resource Groups
- [#4610] Add locale system setting for setting locale in MODX
- Add HTML5 local caching as a toggleable option for manager ui
- [#5788] Fix content not output to browser until after shutdown function
- [#5777] Fix validation of TV names against Resource field names
- Add ability to install and upgrade MODX from command line
- [#5745] Ensure all core passwords are not transmitted through MODx.config JS array
- [#4304] Add default_content_type Setting for setting the default Content Type for Resources