@@ -1561,3 +1561,13 @@ span.required {
     color: #777;
     padding: 0 0 10px;
 }
+
+/* for selectability in ext grids */
+.x-selectable, .x-selectable * {
+     -webkit-user-select: text !important;
+     -o-user-select: text !important;
+     -khtml-user-select: all !important;
+     -ms-user-select: text !important;
+     user-select: text !important;
+     -moz-user-select: text !important;
+}
