@@ -2,6 +2,7 @@
 This file shows the changes in recent releases of MODX. The most current release is usually the
 development release, and is only shown to give an idea of what's currently in the pipeline.
 
+- [#5757] Allow text in grids to be selectable
 - [#5471] Add publishing options to Duplicate Resource window
 - [#5879] Ensure html tags are stripped on titles in the Resource edit view
 - [#5855] Ensure if no parents are specified, resourcelist input option works as expected
